# plugram

./: .env.example  .gitignore  README.md  pyproject.toml
plugram/: __main__.py  app.py  config.py  corpus.py  dispatcher.py  language.py  llm.py  util.py
plugram/modules/: __init__.py  ask.py  base.py  dump.py  fact.py  manage.py  tldr.py  translate.py  twin.py
